force-app/main/default/objects/Card_Payment_Plan_Settings__c/Card_Payment_Plan_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Card Payment Plan Settings</label>
</CustomObject>