force-app/main/default/objects/Card_Payment_Plan_Settings__c/fields/Maximum_Days_Before_Paid__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Days_Before_Paid__c</fullName>
    <description>Represents the number of days the course fee must be fully paid before the course starts. Otherwise, the payment option is not available.
This applies to all course types.</description>
    <label>Maximum Days Before Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>