force-app/main/default/objects/Card_Payment_Plan_Settings__c/fields/Min_Days_Before_First_Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Before_First_Recurring_Payment__c</fullName>
    <description>Represents the number of days before the end of the current month to decide when the first recurring payment will happen:
1. If today is equal or less days before the 1st day of the next month (comparing to the number) then the first recurring payment will be paid on the 1st day of the month that is next to the next month.
2. Otherwise, the first recurring payment will be paid on the 1st day of the next month.</description>
    <label>Min Days Before First Recurring Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>