force-app/main/default/objects/Card_Payment_Plan_Settings__c/fields/Min_Days_Fully_Paid_Before_Course_Start__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Fully_Paid_Before_Course_Start__c</fullName>
    <description>Represents the number of days the course fee must be fully paid before the course starts. Otherwise, the payment option is not available.
This applies to all course types.</description>
    <label>Min Days Fully Paid Before Course Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>