force-app/main/default/objects/Card_Payment_Plan_Settings__c/fields/Minimal_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Recurring_Amount__c</fullName>
    <description>Represents the minimal possible amount of the recurring payment when calculating payment plan options</description>
    <label>Minimal Recurring Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>