force-app/main/default/objects/Card_Payment_Plan_Settings__c/fields/Minimum_First_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_First_Amount__c</fullName>
    <description>Represents the minimal possible amount of the intial payment when calculating payment plan options</description>
    <label>Minimum First Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>